-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 12
-
Component/s: core-libs
-
b10
There are a few inconsistencies (including in TimeZone_md.c and UnixFileSystem_md.c) where opendir/closedir is used instead of opendir64/closedir64. Looks like the AIX port may have run into issues as it redefines them. These inconsistencies should be located and resolved.
- relates to
-
JDK-8202794 Native Unix code should use readdir rather than readdir_r
-
- Closed
-
- links to