8207744: Clean up inconsistent use of opendir/closedir versus opendir64/closedir64

Reviewed-by: bsrbnd, mbaesken, bchristi, simonis